--- a/res/xml/device_info_memory.xml
+++ b/res/xml/device_info_memory.xml
@@ -34,6 +34,21 @@
             android:summary="@string/sd_format_summary"/>
     </PreferenceCategory>
 
+    <PreferenceCategory android:key="memory_nand"
+        android:title="@string/nand_memory">
+        <Preference android:key="memory_nand_size"
+            style="?android:attr/preferenceInformationStyle"
+            android:title="@string/memory_size"
+            android:summary="00" />
+        <Preference android:key="memory_nand_avail"
+            style="?android:attr/preferenceInformationStyle"
+            android:title="@string/memory_available"
+            android:summary="00" />
+        <Preference android:key="memory_nand_format"
+            android:title="@string/nand_format"
+            android:summary="@string/nand_format_summary" />
+    </PreferenceCategory>
+
     <PreferenceCategory android:title="@string/internal_memory">
         <Preference android:key="memory_internal_avail" 
             style="?android:attr/preferenceInformationStyle" 
