--- a/res/layout/preference_widget_wifi_signal.xml
+++ b/res/layout/preference_widget_wifi_signal.xml
@@ -14,10 +14,22 @@
      limitations under the License.
 -->
 
-<ImageView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/signal" 
-    android:layout_width="wrap_content"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginRight="4sp"
-    android:layout_gravity="center_vertical"
-    android:src="@drawable/wifi_signal" />
+    >
+    <ImageView android:id="@+id/wps_enabled"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:layout_marginRight="4sp"
+        android:src="@drawable/wps_enabled"
+        />
+    <ImageView android:id="@+id/signal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:layout_marginRight="4sp"
+        android:src="@drawable/wifi_signal"
+        />
+</LinearLayout>
