--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -98,6 +98,47 @@
         <item>1800000</item>
     </string-array>
 
+    <string-array name="hdmi_resolution_entries">
+        <item>1920x1080p_50Hz</item>
+        <item>1920x1080p_60Hz</item>
+        <item>1280x720p_50Hz</item>
+        <item>1280x720p_60Hz</item>
+        <item>720x576p_50Hz_4x3</item>
+        <item>720x576p_50Hz_16x9</item>
+        <item>720x480p_60Hz_4x3</item>
+        <item>720x480p_60Hz_16x9</item>
+    </string-array>
+    <string-array name="hdmi_resolution_values">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+        <item>4</item>
+        <item>5</item>
+        <item>6</item>
+        <item>7</item>
+    </string-array>
+
+    <string-array name="hdmi_mode_entries">
+        <item>LCD Display</item>
+        <item>HDMI Display</item>
+        <item>LCD and HDMI Display</item>
+    </string-array>
+    <string-array name="hdmi_mode_values">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+    </string-array>
+
+    <string-array name="hdmi_mode2_entries">
+        <item>LCD Display</item>
+        <item>HDMI Display</item>
+    </string-array>
+    <string-array name="hdmi_mode2_values">
+        <item>0</item>
+        <item>1</item>
+    </string-array>
+
     <!-- TTS settings -->
 
     <!-- Default speech rate choices -->
