--- a/res/values/bools.xml
+++ b/res/values/bools.xml
@@ -20,4 +20,6 @@
     <bool name="has_intrusive_led">false</bool>
     <!-- Whether or not the dock settings are to be displayed for this device when docked -->
     <bool name="has_dock_settings">false</bool>
+
+    <bool name="has_hdmi_settings">false</bool>
 </resources>
