--- a/res/layout/master_clear_primary.xml
+++ b/res/layout/master_clear_primary.xml
@@ -19,6 +19,7 @@
 -->
 <LinearLayout
             xmlns:android="http://schemas.android.com/apk/res/android"
+            android:background="#fff"
             style="@style/info_layout">
 
     <ScrollView
