--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -41,11 +41,9 @@
 
     <!-- There is a setting to control the format of dates displayed throughout the system.  This is in the Date & Time Settings screen.  These will be adjusted to use punctuation appropriate to the user's locale. -->
     <string-array name="date_format_values" translatable="false">
-        <!-- The blank item means to use whatever the locale calls for. -->
-        <item></item>
-        <item>MM-dd-yyyy</item>
-        <item>dd-MM-yyyy</item>
-        <item>yyyy-MM-dd</item>
+        <item>MM.dd.yyyy</item>
+        <item>dd.MM.yyyy</item>
+        <item>yyyy.MM.dd</item>
     </string-array>
 
     <!-- Display settings.  The type of animations to show. -->
