--- a/res/xml/date_time_prefs.xml
+++ b/res/xml/date_time_prefs.xml
@@ -23,7 +23,7 @@
         />
     <Preference android:key="date" 
         android:title="@string/date_time_set_date" 
-        android:summary="03/10/2008"
+        android:summary="03.10.2008"
         />
     <PreferenceScreen android:key="timezone" 
         android:title="@string/date_time_set_timezone" 
@@ -40,5 +40,5 @@
     <ListPreference
         android:key="date_format"
         android:title="@string/date_time_date_format" 
-        android:summary="mm/dd/yyyy"/>
+        android:summary="mm.dd.yyyy"/>
 </PreferenceScreen>
