--- a/res/xml/settings.xml
+++ b/res/xml/settings.xml
@@ -51,31 +51,7 @@
                 android:action="android.intent.action.MAIN"
                 android:targetPackage="com.android.settings"
                 android:targetClass="com.android.settings.DisplaySettings" />
-        </com.android.settings.IconPreferenceScreen>
-
-        <!-- Security & Location -->
-
-        <com.android.settings.IconPreferenceScreen
-            settings:icon="@drawable/ic_settings_security"
-            android:title="@string/security_settings_title"
-            android:key="security_settings">
-            <intent
-                android:action="android.intent.action.MAIN"
-                android:targetPackage="com.android.settings"
-                android:targetClass="com.android.settings.SecuritySettings" />
-        </com.android.settings.IconPreferenceScreen>
-
-        <!-- Application Settings -->
-
-        <com.android.settings.IconPreferenceScreen
-            settings:icon="@drawable/ic_settings_applications"
-            android:title="@string/applications_settings"
-            android:key="applications_settings">
-            <intent
-                android:action="android.intent.action.MAIN"
-                android:targetPackage="com.android.settings"
-                android:targetClass="com.android.settings.ApplicationSettings" />
-        </com.android.settings.IconPreferenceScreen>
+        </com.android.settings.IconPreferenceScreen> -->
 
         <!-- Data Sync. The settings activity will ensure this is resolved to an
              activity on the system image, otherwise it will remove this
@@ -138,17 +114,6 @@
                 android:targetClass="com.android.settings.VoiceInputOutputSettings" />
         </com.android.settings.IconPreferenceScreen>
 
-        <!-- Accessibility feedback -->
-
-        <com.android.settings.IconPreferenceScreen
-            settings:icon="@drawable/ic_settings_accessibility"
-            android:title="@string/accessibility_settings">
-            <intent
-                android:action="android.intent.action.MAIN"
-                android:targetPackage="com.android.settings"
-                android:targetClass="com.android.settings.AccessibilitySettings" />
-        </com.android.settings.IconPreferenceScreen>
-
         <!-- Date & Time -->
 
         <com.android.settings.IconPreferenceScreen
@@ -159,6 +124,11 @@
                 android:targetPackage="com.android.settings"
                 android:targetClass="com.android.settings.DateTimeSettings" />
         </com.android.settings.IconPreferenceScreen>
+
+        <com.android.settings.IconPreferenceScreen
+            android:key="drm_settings"
+            android:title="@string/drm_settings"
+            settings:icon="@drawable/ic_settings_drm" />
 
         <!-- About Device -->
 
