--- a/res/values-ru/arrays.xml
+++ b/res/values-ru/arrays.xml
@@ -47,6 +47,12 @@
     <item msgid="5721688686241190620">"10 минут"</item>
     <item msgid="7156442995039264948">"30 минут"</item>
   </string-array>
+  <string-array name="refresh_times_entries">
+    <item>Каждый раз</item>
+    <item>Каждый 3 раз</item>
+    <item>Каждые 5 раза</item>
+    <item>Каждые 10 раз</item>
+  </string-array>
   <string-array name="tts_rate_entries">
     <item msgid="6041212618892492920">"Очень медленная"</item>
     <item msgid="2361722960903353554">"Медленная"</item>
