--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -98,6 +98,19 @@
         <item>1800000</item>
     </string-array>
 
+    <string-array name="refresh_times_entries">
+        <item>every time</item>
+        <item>3 times</item>
+        <item>5 times</item>
+        <item>10 times</item>
+    </string-array>
+    <string-array name="refresh_times_values">
+        <item>1</item>
+        <item>3</item>
+        <item>5</item>
+        <item>10</item>
+    </string-array>
+
     <string-array name="hdmi_resolution_entries">
         <item>1920x1080p_50Hz</item>
         <item>1920x1080p_60Hz</item>
