--- a/res/layout/master_clear_final.xml
+++ b/res/layout/master_clear_final.xml
@@ -19,6 +19,7 @@
 
 <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
+        android:background="#ffffffff"
         style="@style/info_layout">        
 
     <TextView
