--- a/res/xml/wireless_settings.xml
+++ b/res/xml/wireless_settings.xml
@@ -73,6 +73,7 @@
         android:key="toggle_nfc"
         android:title="@string/nfc_quick_toggle_title"
         android:summary="@string/nfc_quick_toggle_summary"
+        android:visibility="invisible"
         android:persistent="false" />
 
 </PreferenceScreen>
