--- a/res/values-ru/arrays.xml
+++ b/res/values-ru/arrays.xml
@@ -149,7 +149,7 @@
     <item msgid="8383098660619805783">"PAP или CHAP"</item>
   </string-array>
   <string-array name="app_install_location_entries">
-    <item msgid="8151497958991952759">"Внутренняя память устройства"</item>
+    <item msgid="8151497958991952759">"Внутренняя память книги"</item>
     <item msgid="3738430123799803530">"Съемная SD-карта"</item>
     <item msgid="4498124044785815005">"На усмотрение системы"</item>
   </string-array>
