--- a/res/layout/locale_picker_item.xml
+++ b/res/layout/locale_picker_item.xml
@@ -14,7 +14,7 @@
      limitations under the License.
 -->
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_height="wrap_content"
     android:layout_width="match_parent"
@@ -33,6 +33,7 @@
     <TextView android:id="@+id/locale"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
         android:textAppearance="?android:attr/textAppearanceLarge"
     />
-</LinearLayout >
+</RelativeLayout>
