--- a/res/layout/master_clear_final.xml
+++ b/res/layout/master_clear_final.xml
@@ -25,6 +25,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="30px"
         android:textSize="20sp"
         android:text="@string/master_clear_final_desc" />
 
