--- a/res/layout/master_clear_primary.xml
+++ b/res/layout/master_clear_primary.xml
@@ -25,6 +25,7 @@
     <ScrollView
             android:layout_width="fill_parent"
             android:layout_height="0dip"
+            android:layout_marginTop="20px"
             android:layout_weight="1">
         <LinearLayout android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -70,7 +71,8 @@
     <Button
             android:id="@+id/initiate_master_clear"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="20dip"
+            android:layout_marginTop="15dip"
+            android:layout_marginBottom="35dip"
             android:layout_width="150dip"
             android:layout_height="wrap_content"
             android:text="@string/master_clear_button_text"
