--- a/res/xml/date_time_prefs.xml
+++ b/res/xml/date_time_prefs.xml
@@ -15,29 +15,36 @@
 -->
 
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
         android:title="@string/date_and_time">
-    <CheckBoxPreference android:key="auto_time" 
+    <com.android.settings.MyCheckBoxPreference android:key="auto_time"
+        settings:checkbg="@drawable/settings_bg_top"
         android:title="@string/date_time_auto"
         android:summaryOn="@string/date_time_auto_summaryOn"
         android:summaryOff="@string/date_time_auto_summaryOff"
         />
-    <Preference android:key="date" 
+    <com.android.settings.MyIconPreferenceScreen android:key="date"
+        settings:bg="@drawable/settings_bg_mid"
         android:title="@string/date_time_set_date" 
         android:summary="03/10/2008"
         />
-    <PreferenceScreen android:key="timezone" 
+    <com.android.settings.MyIconPreferenceScreen android:key="timezone"
+        settings:bg="@drawable/settings_bg_mid"
         android:title="@string/date_time_set_timezone" 
         android:summary="GMT-8:00"
         />
-    <Preference android:key="time" 
+    <com.android.settings.MyIconPreferenceScreen android:key="time"
+        settings:bg="@drawable/settings_bg_mid"
         android:title="@string/date_time_set_time" 
         android:summary="12:00am"
         />
-    <CheckBoxPreference android:key="24 hour" 
+    <com.android.settings.MyCheckBoxPreference android:key="24 hour"
+        settings:checkbg="@drawable/settings_bg_mid"
         android:title="@string/date_time_24hour"
         android:summaryOn="@string/date_time_24_hour_sample"
         android:summaryOff="@string/date_time_12_hour_sample"/>
-    <ListPreference
+    <com.android.settings.MyListPreference
+        settings:bg="@drawable/settings_bg_bottom"
         android:key="date_format"
         android:title="@string/date_time_date_format" 
         android:summary="mm/dd/yyyy"/>
