--- a/res/xml/development_prefs.xml
+++ b/res/xml/development_prefs.xml
@@ -15,19 +15,23 @@
 -->
 
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
         android:title="@string/development_settings_title">
         
-    <CheckBoxPreference 
+    <com.android.settings.MyCheckBoxPreference
+        settings:checkbg="@drawable/settings_bg_top"
         android:key="enable_adb" 
         android:title="@string/enable_adb" 
         android:summary="@string/enable_adb_summary"/>
 
-    <CheckBoxPreference 
+    <com.android.settings.MyCheckBoxPreference
+        settings:checkbg="@drawable/settings_bg_mid"
         android:key="keep_screen_on" 
         android:title="@string/keep_screen_on" 
         android:summary="@string/keep_screen_on_summary"/>
 
-    <CheckBoxPreference 
+    <com.android.settings.MyCheckBoxPreference
+        settings:checkbg="@drawable/settings_bg_bottom"
         android:key="allow_mock_location" 
         android:title="@string/allow_mock_location" 
         android:summary="@string/allow_mock_location_summary"/>
