--- a/res/xml/device_info_settings.xml
+++ b/res/xml/device_info_settings.xml
@@ -15,60 +15,71 @@
 -->
 
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
         android:title="@string/about_settings">
 
         <!-- System update settings - launches activity -->
-        <PreferenceScreen android:key="system_update_settings"
-                android:title="@string/system_update_settings_list_item_title" 
+        <com.android.settings.MyIconPreferenceScreen
+                settings:bg="@drawable/settings_bg_top"
+                android:key="system_update_settings"
+                android:title="@string/system_update_settings_list_item_title"
                 android:summary="@string/system_update_settings_list_item_summary">
             <intent android:action="android.intent.action.MAIN"
                     android:targetPackage="android.rockchip.update.service"
                     android:targetClass="android.rockchip.update.service.Setting" />
-        </PreferenceScreen>
+        </com.android.settings.MyIconPreferenceScreen>
         
         <!-- Device status - launches activity -->
-        <PreferenceScreen android:key="status_info"
+        <com.android.settings.MyIconPreferenceScreen android:key="status_info"
+                settings:bg="@drawable/settings_bg_mid"
                 android:title="@string/device_status" 
                 android:summary="@string/device_status_summary">
             <intent android:action="android.intent.action.MAIN"
                     android:targetPackage="com.android.settings"
                     android:targetClass="com.android.settings.deviceinfo.Status" />
-        </PreferenceScreen>
+        </com.android.settings.MyIconPreferenceScreen>
 
         <!-- Legal Information -->
-        <PreferenceScreen
+        <com.android.settings.MyIconPreferenceScreen
+                settings:bg="@drawable/settings_bg_mid"
                 android:key="safetylegal"
                 android:title="@string/settings_safetylegal_title">
             <intent android:action="android.settings.SAFETY" />
-        </PreferenceScreen>
+        </com.android.settings.MyIconPreferenceScreen>
 
         <!-- System Tutorial - launches activity -->
-        <PreferenceScreen android:key="system_tutorial"
-                android:title="@string/system_tutorial_list_item_title" 
+        <com.android.settings.MyIconPreferenceScreen
+                settings:bg="@drawable/settings_bg_mid"
+                android:key="system_tutorial"
+                android:title="@string/system_tutorial_list_item_title"
                 android:summary="@string/system_tutorial_list_item_summary">
             <intent android:action="android.intent.action.SYSTEM_TUTORIAL" />
-        </PreferenceScreen>
+        </com.android.settings.MyIconPreferenceScreen>
         
         <!-- Device hardware model -->
-        <Preference android:key="device_model" 
+        <com.android.settings.MyIconPreferenceScreen android:key="device_model"
+                settings:bg="@drawable/settings_bg_mid"
                 style="?android:preferenceInformationStyle"
                 android:title="@string/model_number"
                 android:summary="@string/device_info_default"/>
                 
         <!-- Device firmware version -->
-        <Preference android:key="firmware_version" 
+        <com.android.settings.MyIconPreferenceScreen android:key="firmware_version"
+                settings:bg="@drawable/settings_bg_mid"
                 style="?android:preferenceInformationStyle"
                 android:title="@string/firmware_version"
                 android:summary="@string/device_info_default"/>
                 
         <!-- Device Kernel version -->
-        <Preference android:key="kernel_version" 
+        <com.android.settings.MyIconPreferenceScreen android:key="kernel_version"
+                settings:bg="@drawable/settings_bg_mid"
                 style="?android:preferenceInformationStyle"
                 android:title="@string/kernel_version"
                 android:summary="@string/device_info_default"/>
 
         <!-- Detailed build version -->
-        <Preference android:key="build_number" 
+        <com.android.settings.MyIconPreferenceScreen android:key="build_number"
+                settings:bg="@drawable/settings_bg_bottom"
                 style="?android:preferenceInformationStyle"
                 android:title="@string/build_number"
                 android:summary="@string/device_info_default"/>
