--- a/res/layout/manage_applications.xml
+++ b/res/layout/manage_applications.xml
@@ -62,8 +62,8 @@
                 android:layout_weight="0"
                 android:layout_marginTop="-20dp"
                 android:textAppearance="?android:attr/textAppearanceSmallInverse"
-                android:textColor="#ccc"
-                android:shadowColor="#000"
+                android:textColor="#000"
+                android:background="#fff"
                 android:shadowRadius="5"
                 android:textStyle="bold"
                 android:singleLine="true"
