--- a/res/xml/device_info_status.xml
+++ b/res/xml/device_info_status.xml
@@ -15,8 +15,20 @@
 -->
 
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
-        android:title="@string/device_status_activity_title">
+        xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
+    <com.android.settings.TitlePreference
+        android:title="Settings"
+        android:key="title"
+        settings:settingicon="@drawable/settings_icon" />
+    <com.android.settings.ChildTitlePreference
+        android:title="@string/device_status_activity_title"
+        android:key="satausettings_back"
+        settings:settingicon="@drawable/settings_back">
+        <intent android:targetPackage="com.android.settings"
+                android:action="android.intent.action.MAIN"
+                android:targetClass="com.android.settings.DeviceInfoSettings" />
+    </com.android.settings.ChildTitlePreference>
+    <com.android.settings.MyIconPreferenceScreen android:key="space" settings:height="30px" />
 
     <com.android.settings.MyIconPreferenceScreen android:key="battery_status"
         settings:bg="@drawable/settings_bg_top"
