--- a/res/layout/media_format_final.xml
+++ b/res/layout/media_format_final.xml
@@ -21,6 +21,37 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         style="@style/info_layout">        
 
+    <RelativeLayout android:id="@+id/relate_media_format_backsettings"
+        android:layout_width="match_parent"
+        android:layout_height="55px"
+        android:layout_marginTop="0px"
+        android:orientation="horizontal">
+
+        <ImageView android:id="@+id/media_format_settings"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5px"
+            android:layout_alignParentLeft="true"
+            android:layout_centerVertical="true"
+            android:layout_gravity="center"
+            android:background="@drawable/settingback_button"
+            />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:textAppearance="?android:textAppearanceLarge"
+            android:textSize="25sp"
+            android:textStyle="bold"
+            android:textColor="#000"
+            android:ellipsize="marquee"
+            android:gravity="bottom"
+            android:fadingEdge="horizontal"
+            android:text="@string/sd_format"
+            android:singleLine="true"
+            />
+    </RelativeLayout>
+
     <TextView android:id="@+id/media_format_final_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
