--- a/res/xml/date_time_prefs.xml
+++ b/res/xml/date_time_prefs.xml
@@ -15,8 +15,20 @@
 -->
 
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
-        android:title="@string/date_and_time">
+        xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
+    <com.android.settings.TitlePreference
+            settings:settingicon="@drawable/settings_icon"
+            android:title="@string/settings_label" />
+    <com.android.settings.ChildTitlePreference
+        android:title="@string/date_and_time"
+        android:key="datetime_settings_back"
+        settings:settingicon="@drawable/settings_back">
+        <intent android:targetPackage="com.android.settings"
+                android:action="android.intent.action.MAIN"
+                android:targetClass="com.android.settings.Settings" />
+    </com.android.settings.ChildTitlePreference>
+    <com.android.settings.MyIconPreferenceScreen settings:height="30px" />
+
     <com.android.settings.MyCheckBoxPreference android:key="auto_time"
         settings:checkbg="@drawable/settings_bg_top"
         android:title="@string/date_time_auto"
