--- a/res/xml/development_prefs.xml
+++ b/res/xml/development_prefs.xml
@@ -15,8 +15,19 @@
 -->
 
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
-        android:title="@string/development_settings_title">
+        xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
+    <com.android.settings.TitlePreference
+            settings:settingicon="@drawable/settings_icon"
+            android:title="@string/settings_label" />
+    <com.android.settings.ChildTitlePreference
+            android:title="@string/development_settings_title"
+            android:key="develop_settings_back"
+            settings:settingicon="@drawable/settings_back">
+        <intent android:targetPackage="com.android.settings"
+                android:action="android.intent.action.MAIN"
+                android:targetClass="com.android.settings.ApplicationSettings" />
+    </com.android.settings.ChildTitlePreference>
+    <com.android.settings.MyIconPreferenceScreen settings:height="30px" />
         
     <com.android.settings.MyCheckBoxPreference
         settings:checkbg="@drawable/settings_bg_top"
