--- a/res/xml/device_info_settings.xml
+++ b/res/xml/device_info_settings.xml
@@ -15,8 +15,19 @@
 -->
 
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
-        android:title="@string/about_settings">
+        xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
+        <com.android.settings.TitlePreference
+                android:title="@string/settings_label"
+                settings:settingicon="@drawable/settings_icon" />
+        <com.android.settings.ChildTitlePreference
+                android:title="@string/about_settings"
+                android:key="device_back"
+                settings:settingicon="@drawable/settings_back">
+            <intent android:targetPackage="com.android.settings"
+                    android:action="android.intent.action.MAIN"
+                    android:targetClass="com.android.settings.Settings" />
+        </com.android.settings.ChildTitlePreference>
+        <com.android.settings.MyIconPreferenceScreen settings:height="30px" />
 
         <!-- System update settings - launches activity -->
         <com.android.settings.MyIconPreferenceScreen
