--- a/res/xml/wifi_settings.xml
+++ b/res/xml/wifi_settings.xml
@@ -16,7 +16,21 @@
 
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
+        android:key="wifi_parent"
         android:title="@string/wifi_settings_category">
+    <com.android.settings.TitlePreference
+            android:title="@string/settings_label"
+            android:key="wifi_title"
+            settings:settingicon="@drawable/settings_icon" />
+    <com.android.settings.ChildTitlePreference
+            android:title="@string/wifi_settings_category"
+            android:key="wifisettings_back"
+            settings:settingicon="@drawable/settings_back">
+        <intent android:targetPackage="com.android.settings"
+                android:action="android.intent.action.MAIN"
+                android:targetClass="com.android.settings.Settings" />
+    </com.android.settings.ChildTitlePreference>
+    <com.android.settings.MyIconPreferenceScreen android:key="wifi_space" settings:height="30px" />
 
     <com.android.settings.MyCheckBoxPreference
             settings:checkbg="@drawable/settings_bg_top"
