res: strings and arrays

--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -74,28 +74,50 @@
 
     <!-- Display settings.  The delay in inactivity before the screen is turned off. These are shown ain a list dialog. -->
     <string-array name="screen_timeout_entries">
-        <item>15 seconds</item>
-        <item>30 seconds</item>
-        <item>1 minute</item>
-        <item>2 minutes</item>
+        <item>Disabled</item>
+        <item>5 minutes</item>
         <item>10 minutes</item>
+        <item>15 minutes</item>
         <item>30 minutes</item>
+        <item>1 hour</item>
+    </string-array>
+    <string-array name="screen_timeout_values">
+        <item>-1</item>
+        <item>300000</item>
+        <item>600000</item>
+        <item>900000</item>
+        <item>1800000</item>
+        <item>3600000</item>
     </string-array>
 
-    <!-- Do not translate. -->
-    <string-array name="screen_timeout_values" translatable="false">
-        <!-- Do not translate. -->
-        <item>15000</item>
-        <!-- Do not translate. -->
-        <item>30000</item>
-        <!-- Do not translate. -->
-        <item>60000</item>
-        <!-- Do not translate. -->
-        <item>120000</item>
-        <!-- Do not translate. -->
-        <item>600000</item>
-        <!-- Do not translate. -->
-        <item>1800000</item>
+    <string-array name="auto_shutdown_timeout_entries">
+        <item>Disabled</item>
+        <item>1 hour</item>
+        <item>2 hours</item>
+        <item>3 hours</item>
+        <item>4 hours</item>
+    </string-array>
+    <string-array name="auto_shutdown_timeout_values">
+        <item>-1</item>
+        <item>3600000</item>
+        <item>7200000</item>
+        <item>10800000</item>
+        <item>14400000</item>
+    </string-array>
+
+    <string-array name="page_refresh_rate_entries">
+        <item>After every page</item>
+        <item>After 2 pages</item>
+        <item>After 3 pages</item>
+        <item>After 4 pages</item>
+        <item>After 5 pages</item>
+    </string-array>
+    <string-array name="page_refresh_rate_values">
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+        <item>4</item>
+        <item>5</item>
     </string-array>
 
     <!-- TTS settings -->
